fix courses v2 line spacing

--- a/src/scss/blocks/block-courses-v2.scss
+++ b/src/scss/blocks/block-courses-v2.scss
@@ -67,6 +67,7 @@ section.block-courses-v2 {
       .line {
         display: flex;
         width: 100%;
+        margin-bottom: 20px;
         background-color: rgba(var(--course-color), 0.1);
       }
 
